fix: Add depencies. Update README

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -7,5 +7,5 @@ github_username: jdickerson95
 mode: tooling
 module_name: torch_angular_search
 project_name: torch-angular-search
-project_short_description: Generate unfirform 3D euler angles (ZYZ)
+project_short_description: Generate uniform 3D euler angles (ZYZ)
 
