--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ sources = ["src"]
 [project]
 name = "torch-angular-search"
 dynamic = ["version"]
-description = "Generate unfirform 3D euler angles (ZYZ)"
+description = "Generate uniform 3D euler angles (ZYZ)"
 readme = "README.md"
 requires-python = ">=3.9"
 license = { text = "BSD-3-Clause" }
@@ -35,7 +35,9 @@ classifiers = [
     "Typing :: Typed",
 ]
 # add your package dependencies here
-dependencies = []
+dependencies = [
+    "torch",
+]
 
 # https://peps.python.org/pep-0621/#dependencies-optional-dependencies
 # "extras" (e.g. for `pip install .[test]`)
