feat: add roma as dependency for torch rotation conversions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ classifiers = [
 dependencies = [
     "torch",
     "numpy",
+    "roma",
 ]
 
 # https://peps.python.org/pep-0621/#dependencies-optional-dependencies
