--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ classifiers = [
 dependencies = [
     "torch",
     "numpy",
-    "roma",
+    "healpy",
 ]
 
 # https://peps.python.org/pep-0621/#dependencies-optional-dependencies
