--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,11 @@ classifiers = [
     "Typing :: Typed",
 ]
 # add your package dependencies here
-dependencies = ["torch>=2.6.0", "numpy", "healpy; platform_system != 'Windows'"]
+dependencies = [
+    "torch", 
+    "numpy", 
+    "healpy==1.18.0; platform_system != 'Windows'"
+]
 
 # https://peps.python.org/pep-0621/#dependencies-optional-dependencies
 # "extras" (e.g. for `pip install .[test]`)
